# mksite

./: .gitmodules  CMakeLists.txt  README.md  xmake.lua
example/: Makefile
example/assets/: style.css
example/pages/: index.md
example/pages/blog/: some-post.md
example/pages/photos/: index.md
example/templates/: page.html
include/: frontmatter.hpp  page.hpp  rendering.hpp  yaml.hpp
src/: frontmatter.cpp  main.cpp  page.cpp  rendering.cpp  yaml.cpp
